Fixed flickering - not the best solution but
speeding up animation seemed to stop the flickering, the background
color was also changed in this section.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed; */
-    background-color: grey;
+    background-color: rgb(39, 39, 39);
     display: flex;
     flex-direction: column;
     justify-content: center;
